--- a/config/omni_base_params.yaml
+++ b/config/omni_base_params.yaml
@@ -1,3 +1,3 @@
 # Parameters for the module names, gains, hrdf, etc
-names: [ "wheel1", "wheel2", "wheel3" ]
+names: [ "W1", "W2", "W3" ]
 families: [ "OmniDrive" ]
