Initial tready node (#52)
* Initial port or python tready

(Pushing clean parts of code)

* Initial control implementation; unfinished.

* Added forgotten header file

* Finish initial tready control impl; need wrappers and nodes next.

* Moved state machine to control folder

* Add functioning tready base node (with no inputs)

* Fix various tready base node issues

(1) init eigen arrays
(2) trajectory time for large values; buggy in ROS C++ package, so add
variable to track start time.
(3) add ramp down to stop at end of trajectories
(4) add basic ROS node functionality
(5) fix naming of modules (switched tracks and flippers)

* Fix tready flippers

* Fix tready control

* Comment out tready control logic for now

* Added treaded base state and flipper command messages

* Added basic launchfile for tready with arm+gripper

Co-authored-by: Chris Bollinger <chris@hebirobotics.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,11 +35,13 @@ add_action_files(
 add_message_files(
   FILES
   EndPath.msg
+  FlipperVelocityCommand.msg
   OffsetPlayback.msg
   Playback.msg
   SaveWaypoint.msg
   StartPath.msg
   TargetWaypoints.msg
+  TreadedBaseState.msg
 )
 
 add_service_files(
@@ -153,9 +155,25 @@ target_link_libraries(hexapod_control ${catkin_LIBRARIES})
 add_executable(hexapod_controller src/kits/daisy/controller_node.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/kits/daisy/input/mobile_io.cpp
 )
-target_include_directories(hexapod_control PRIVATE src/kits/daisy)
+target_include_directories(hexapod_controller PRIVATE src/kits/daisy)
 add_dependencies(hexapod_controller ${catkin_EXPORTED_TARGETS})
 target_link_libraries(hexapod_controller ${catkin_LIBRARIES})
+
+add_executable(treaded_base_node
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/kits/tready/treaded_base_node.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/kits/tready/robot/treaded_base.cpp)
+
+target_include_directories(treaded_base_node PRIVATE src/kits/tready)
+add_dependencies(treaded_base_node ${catkin_EXPORTED_TARGETS})
+target_link_libraries(treaded_base_node ${catkin_LIBRARIES})
+
+#add_executable(tready_controller src/kits/tready/controller_node.cpp
+#  src/kits/tready/control/tready_arm_joystick_control.cpp
+#  src/kits/tready/control/tready_control.cpp
+#)
+#target_include_directories(tready_controller PRIVATE src/kits/tready)
+#add_dependencies(tready_controller ${catkin_EXPORTED_TARGETS})
+#target_link_libraries(tready_controller ${catkin_LIBRARIES})
 
 #############
 ## Install ##
