Add imu/com topics to basic group node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ add_message_files(
   StartPath.msg
   TargetWaypoints.msg
   TreadedBaseState.msg
+  GroupSensorState.msg
 )
 
 add_service_files(
