--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>hebi_cpp_api_examples</name>
   <version>1.0.0</version>
   <description>Examples of using HEBI components through ROS, using the HEBI C++ API.</description>
@@ -11,24 +11,26 @@
 
   <author email="matt@hebirobotics.com">Matthew Tesch</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roslib</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>genmsg</build_depend>
-  <exec_depend>message_runtime</exec_depend>
-  <build_export_depend>message_runtime</build_export_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>roscpp</depend>
-  <depend>actionlib</depend>
-  <depend>actionlib_msgs</depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
+  <build_depend>eigen</build_depend>
+
+  <depend>rclcpp</depend>
+  <depend>hebi_cpp_api</depend>
+  <depend>tf</depend>
+  <depend>action_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
-  <depend>geometry_msgs</depend>
-  <depend>tf</depend>
   <depend>trajectory_msgs</depend>
   <depend>control_msgs</depend>
-  <depend>hebi_cpp_api</depend>
   
-  <export />
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
